# soap-client-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  QUICKSTART.md  README.md  TODO.md
.github/: AI_ASSISTANTS.md  CI.md  copilot-chat-context.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: API_DOCUMENTATION.md  DOCUMENTATION_STRUCTURE.md  TRACING.md
examples/: README.md
examples/calculator/: Cargo.toml  README.md  build.rs
examples/calculator/src/: main.rs
examples/observability/: Cargo.toml  README.md  build.rs  docker-compose.yml  grafana-datasources.yml  prometheus.yml
examples/observability/src/: main.rs
scripts/: PRE_PUBLISH_CHECKLIST.md  README.md  publish.sh
soapus-cli/: Cargo.toml  README.md
soapus-cli/src/: main.rs
soapus-codegen/: Cargo.toml  README.md
soapus-codegen/src/: error.rs  lib.rs
soapus-codegen/src/generator/: mod.rs  rust_codegen.rs  type_mapper.rs
soapus-codegen/src/parser/: mod.rs
soapus-codegen/src/parser/wsdl/: binding.rs  definitions.rs  message.rs  mod.rs  parser.rs  port_type.rs  service.rs  types.rs
soapus-codegen/src/parser/xsd/: complex_type.rs  element.rs  mod.rs  parser.rs  schema_attributes.rs  schema_content.rs  sequence.rs  simple_type.rs
soapus-codegen/tests/: integration_test.rs
soapus-runtime/: Cargo.toml  README.md
soapus-runtime/src/: client.rs  envelope.rs  error.rs  lib.rs
src/: lib.rs  main.rs  model.rs  wsdl.rs
src/codegen/: generator.rs  mod.rs
src/parser/: mod.rs  wsdl.rs
testdata/: README.md
testdata/wsdl/: numberconversion.wsdl
tests/: it_external_app.rs
