[package]
name = "soapus-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Code generator for SOAP clients from WSDL files"
keywords = ["soap", "wsdl", "codegen", "xml", "webservice"]
categories = ["web-programming", "parsing", "development-tools::build-utils"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../LICENSE-MIT",
]

[dependencies]
# XML Processing
quick-xml.workspace = true
xmltree.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Code Generation
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
# Feature für zukünftige WS-Security, WS-Addressing, etc.
ws-security = []
ws-addressing = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
