[package]
name = "soapus-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime library for SOAP clients - handles HTTP requests and SOAP envelope building"
keywords = ["soap", "wsdl", "http", "xml", "webservice"]
categories = ["web-programming", "network-programming"]
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../LICENSE-MIT",
]

[dependencies]
# Async Runtime
tokio.workspace = true

# HTTP Client
reqwest.workspace = true

# XML Processing
quick-xml.workspace = true

# Serialization
serde.workspace = true

# Error Handling
thiserror.workspace = true

# Tracing & Observability
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"], optional = true }
metrics = { version = "0.21", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true

[features]
default = ["soap11", "soap12", "tracing"]
soap11 = []
soap12 = []
tracing = ["dep:tracing"]
opentelemetry = ["tracing", "dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk"]
metrics = ["tracing", "dep:metrics"]
# Zukünftige Features
mtom = []
ws-security = []
ws-addressing = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
